updated front matter

--- a/_posts/2025-07-16-agave.md
+++ b/_posts/2025-07-16-agave.md
@@ -8,15 +8,17 @@ author: Ashley Buchanan
 authors:
 - Ashley Buchanan
 date: 2025-01-01
-layout: post
-thumbnail: agave.jpg
 permalink: /agave
 tags: succulent desert fiber beverage
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/agave
 image:
   path: wc:Gc29_agave_americana.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
