--- a/_posts/2025-07-16-banana.md
+++ b/_posts/2025-07-16-banana.md
@@ -5,15 +5,17 @@ description: The banana’s familiar image hides a complex history of human inte
   cultural stereotypes, and highlights the ongoing confusion in its scientific classification.
 author: Ashley Buchanan
 date: 2025-01-01
-layout: post
-thumbnail: Banana.jpg
 permalink: /banana
 tags: fruit tropical staple
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/banana
 image:
   path: wc:Banana_Maria_Sibylla_Merian_1705_plate_XII.png
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
