--- a/_posts/2025-07-16-boxwood.md
+++ b/_posts/2025-07-16-boxwood.md
@@ -6,15 +6,17 @@ description: Boxwood, once overlooked, rose to prominence as a popular ornamenta
   boxwood blight.
 author: Anatole Tchikine
 date: 2025-01-01
-layout: post
-thumbnail: https://raw.githubusercontent.com/plant-humanities/media/main/thumbnails/boxwood.jpg
 permalink: /boxwood
 tags: shrub ornamental temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/boxwood
 image:
   path: wc:Gew%C3%B6hnlicher_Buchsbaum%2C_Buxus_sempervirens_.JPG
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
