--- a/_posts/2025-07-16-cacao.md
+++ b/_posts/2025-07-16-cacao.md
@@ -6,15 +6,17 @@ description: Cacao, the source of chocolate, has a deep history rooted in ancien
   role in colonial encounters and cultural exchange.
 author: Rebecca Friedel
 date: 2025-01-01
-layout: post
-thumbnail: cacao.jpg
 permalink: /cacao
 tags: fruit beverage tropical stimulant
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/cacao
 image:
   path: cacao-banner.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
