--- a/_posts/2025-07-16-cassava.md
+++ b/_posts/2025-07-16-cassava.md
@@ -6,15 +6,17 @@ description: Cassava is a vital global food source, feeding millions despite its
   the world.
 author: Christina Emery, Rachel Hirsch, and Melinda Susanto
 date: 2025-01-01
-layout: post
-thumbnail: cassava.jpg
 permalink: /cassava
 tags: root tropical drought-tolerant staple
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/cassava
 image:
   path: banner.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
