--- a/_posts/2025-07-16-cinnamon.md
+++ b/_posts/2025-07-16-cinnamon.md
@@ -6,15 +6,17 @@ description: Once just a kitchen spice—and briefly an internet stunt—cinnamo
   impact on medicine, commerce, and history.
 author: Wouter Klein
 date: 2025-01-01
-layout: post
-thumbnail: cinnamon.jpg
 permalink: /cinnamon
 tags: spice medicinal tropical
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/cinnamon
 image:
   path: banner.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
