--- a/_posts/2025-07-16-dittany.md
+++ b/_posts/2025-07-16-dittany.md
@@ -6,15 +6,17 @@ description: Used for over 2,000 years, dittany has been closely tied to womenâ€
   plant across time.
 author: Ashley Buchanan
 date: 2025-01-01
-layout: post
-thumbnail: dittany.jpg
 permalink: /dittany
 tags: herb spice medicinal temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/dittany
 image:
   path: wc:Origanum-dictamnus-1.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
