--- a/_posts/2025-07-16-eggplant.md
+++ b/_posts/2025-07-16-eggplant.md
@@ -6,15 +6,17 @@ description: The eggplant is more than just a versatile global ingredientâ€”itâ€
   revealing how food carries layered meanings across cultures.
 author: Ana Carolina Carmona-Ribeiro, Nathan Cornish, and Sheila Scoville
 date: 2025-01-01
-layout: post
-thumbnail: eggplant.jpg
 permalink: /eggplant
 tags: vegetable tropical
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/eggplant
 image:
   path: Seikei_Zusetsu_cover.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
