--- a/_posts/2025-07-16-indigo.md
+++ b/_posts/2025-07-16-indigo.md
@@ -7,15 +7,17 @@ description: Vermeer’s *Girl with a Pearl Earring* once featured a rich indigo
   cultural significance.
 author: Jordan Noelle Smith, Gianna Welty, & Hayley Blair
 date: 2025-01-01
-layout: post
-thumbnail: wc:Indigofera_heterantha_Indygowiec_2019-07-20_03.jpg
 permalink: /indigo
 tags: shrub dye legume tropical
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/indigo
 image:
   path: wc:Indigofera_heterantha_Indygowiec_2019-07-20_03.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
