--- a/_posts/2025-07-16-katsura.md
+++ b/_posts/2025-07-16-katsura.md
@@ -7,15 +7,17 @@ description: The katsura tree at Dumbarton Oaks, with its sweeping branches and 
   D.C. garden.
 author: Abner Aldarondo
 date: 2025-01-01
-layout: post
-thumbnail: katsura.jpg
 permalink: /katsura
 tags: tree ornamental temperate cold-hardy
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/katsura
 image:
   path: wc:Katsura_Tree_Cercidiphyllum_japonicum_Trunk_Bark_2000px.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
