--- a/_posts/2025-07-16-mint.md
+++ b/_posts/2025-07-16-mint.md
@@ -6,15 +6,17 @@ description: Mint is a globally widespread plant with thousands of varieties, wo
   and global plant exchange.
 author: Victoria Pickering
 date: 2025-01-01
-layout: post
-thumbnail: mint.jpg
 permalink: /mint
 tags: herb medicinal temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/mint
 image:
   path: wc:English_botany%2C_or%2C_Coloured_figures_of_British_plants_%281863%29_%2814784245103%29.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
