--- a/_posts/2025-07-16-okra.md
+++ b/_posts/2025-07-16-okra.md
@@ -6,8 +6,6 @@ description: Okra, a cultivated plant with no clear wild ancestor, has deep root
   and cultural heritage.
 author: Allison Caban and Malek Charchour
 date: 2025-01-01
-layout: post
-thumbnail: okra.jpg
 permalink: /okra
 tags: vegetable tropical heat-tolerant
 published: true
@@ -15,7 +13,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/okra
 image:
   path: wc:Okra_%28Abelmoschus_esculentus%29_%283%29.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
