--- a/_posts/2025-07-16-peanut.md
+++ b/_posts/2025-07-16-peanut.md
@@ -6,15 +6,17 @@ description: Despite its name, the peanut is a legume with deep roots in South A
   and symbolic significance across continents.
 author: Maria Job, Elizabeth Chant, and Katherine Enright
 date: 2025-01-01
-layout: post
-thumbnail: peanut.jpg
 permalink: /peanut
 tags: legume nut oilseed nitrogen-fixer
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/peanut
 image:
   path: wc:A_Peanut_Plant%2C_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
