--- a/_posts/2025-07-16-pecan.md
+++ b/_posts/2025-07-16-pecan.md
@@ -6,15 +6,17 @@ description: Whether you say PEE-can or puh-KAHN, the pecan’s story goes far b
   trade, and diets, and how modern cultivation risks disrupting that delicate balance.
 author: MaryKathryn Underwood, Stefania Rocca, and Paolo Taffaro
 date: 2025-01-01
-layout: post
-thumbnail: pecan.jpg
 permalink: /pecan
 tags: nut tree temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/pecan
 image:
   path: wc:Georgia%2C_historical_and_industrial_%281901%29_%2814593605160%29.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
