--- a/_posts/2025-07-16-peony.md
+++ b/_posts/2025-07-16-peony.md
@@ -6,15 +6,17 @@ description: Peonies are prized today for their stunning blooms, but they also h
   remedies like a “miraculous” infant convulsion powder.
 author: Ashley Buchanan
 date: 2025-01-01
-layout: post
-thumbnail: Peony_Thumbnail.jpg
 permalink: /peony
 tags: flower ornamental temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/peony
 image:
   path: wc:Smith_-_Chinese_Tree_Peony_%28Paeonia_suffruticosa%29_-_1939.288_-_Cleveland_Museum_of_Art.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
