--- a/_posts/2025-07-16-soybean.md
+++ b/_posts/2025-07-16-soybean.md
@@ -6,7 +6,6 @@ description: Soybeans are everywhere—from grocery store shelves to livestock f
   entangled in issues of deforestation, food systems, and environmental politics.
 author: Nina Elkadi
 date: 2025-01-01
-layout: post
 thumbnail: soybean.png
 permalink: /soybean
 tags: legume grain oilseed nitrogen-fixer
@@ -14,7 +13,11 @@ published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/soybean
 image:
   path: wc:Glycine_max_15-p.bot-glyci.max-033.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 Soy is everywhere. It can be found on the coating of fruit in the grocery store, in candy bars, and it comprises most of the vegetable oil we consume. Some experts claim Americans consume almost 40 pounds of soybean oil each year.[^1] Despite its prominence in human food, the soybean is the most common item on the menu for farmed animals, who eat over 90 percent of what is grown today.[^2] In 2021, six percent of the earth’s surface was covered with soybeans.[^3]
