--- a/_posts/2025-07-16-tamarack.md
+++ b/_posts/2025-07-16-tamarack.md
@@ -7,8 +7,6 @@ description: The Tamarack tree, or Larix laricina, holds deep cultural and ecolo
   and interconnectedness with the natural world.
 author: Hannah Hardenbergh
 date: 2025-01-01
-layout: post
-thumbnail: tamarack.jpg
 permalink: /tamarack
 tags: tree conifer wetland cold-hardy
 published: true
@@ -16,7 +14,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/tamarack
 image:
   path: wc:Crowns_of_Siberian_larch_in_winter.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
