--- a/_posts/2025-07-16-tamarind.md
+++ b/_posts/2025-07-16-tamarind.md
@@ -6,15 +6,17 @@ description: The tamarind tree (Tamarindus indica) is both revered and feared—
   a plant of refuge, resilience, and supernatural lore.
 author: Allison Fulton, Amara Santiesteban Serrano, and Jeannette Schollaert
 date: 2025-01-01
-layout: post
-thumbnail: tamarind.jpg
 permalink: /tamarind
 tags: fruit tropical condiment
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/tamarind
 image:
   path: wc:Tamarindus_indica03.JPG
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
