--- a/_posts/2025-07-16-turmeric.md
+++ b/_posts/2025-07-16-turmeric.md
@@ -6,15 +6,17 @@ description: Turmeric, prized for its vivid yellow-orange rhizome, has long been
   played a role in British imperial identity and cultural performance.
 author: Julia Fine
 date: 2025-01-01
-layout: post
-thumbnail: turmeric.jpg
 permalink: /turmeric
 tags: root spice medicinal tropical
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/turmeric
 image:
   path: https://images.nypl.org/index.php?id=1126115&t=w
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
