--- a/_posts/2025-08-28-gulmohar.md
+++ b/_posts/2025-08-28-gulmohar.md
@@ -5,8 +5,6 @@ description: This article explores the history and cultural significance of the 
   botanical networks in the nineteenth century.
 author: Nidhish Birhade
 date: 2025-08-01
-layout: post
-thumbnail: gulmohar.jpg
 permalink: /gulmohar
 tags: flower ornamental subtropical tree tropical
 published: true
@@ -14,7 +12,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/gulmohar
 image:
   path: CurtisGulmohar.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 The *[Delonix regia](Q238486)*—or the Gulmohar, as it is called in India—is a flowering tree native to Madagascar.[^1] It blossoms every summer across villages and cities in India, and its vivid red flowers are associated strongly with the ideas of home, nostalgia, and summertime. A popular name for housing societies, residential areas, parks, restaurants, resorts, boutiques, companies, songs, a literary magazine, and an award-winning Disney+ Hotstar movie, the Gulmohar takes on many faces in India, each serving as a testament to its cultural significance. 
