--- a/_posts/2025-08-28-jasmine.md
+++ b/_posts/2025-08-28-jasmine.md
@@ -8,8 +8,6 @@ description: Jasmine, native to Central and South Asia, has spread worldwide thr
   and a political emblem, as in Tunisia’s “Jasmine Revolution.”
 author: Adriana Ballinger and Tori Champion
 date: 2025-08-01
-layout: post
-thumbnail: jasmine.jpg
 permalink: /jasmine
 tags: flower medicinal ornamental shrub subtropical tropical
 published: true
@@ -17,7 +15,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/jasmine
 image:
   path: wc:Jasminum_polyanthum_kz01.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
