--- a/_posts/2025-08-28-mulberry.md
+++ b/_posts/2025-08-28-mulberry.md
@@ -7,8 +7,6 @@ description: White mulberry (Morus alba) spread worldwide with sericulture, once
   efforts.
 author: Kate Aubrecht and Viveca Mellegård
 date: 2025-08-01
-layout: post
-thumbnail: mulberry.jpg
 permalink: /mulberry
 tags: fiber fruit ornamental temperate tree
 published: true
@@ -16,7 +14,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/mulberry
 image:
   path: wc:Singing_games_-_The_Mulberry_Bush.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
