--- a/_posts/2025-11-25-wild-rice.md
+++ b/_posts/2025-11-25-wild-rice.md
@@ -6,8 +6,6 @@ description: Wild rice (Zizania palustris) is a Great Lakes wetland grass centra
   driving renewed conservation and Rights-of-Nature efforts.
 author: Flora Klein
 date: 2025-11-24
-layout: post
-thumbnail: thumbnail.jpg
 permalink: /wild-rice
 tags: grain staple gluten-free wetland temperate medicinal
 published: true
@@ -15,7 +13,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/wild-rice
 image:
   path: wc:Zizania_palustris_(20150206966).jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
