--- a/_posts/2025-07-16-poppy.md
+++ b/_posts/2025-07-16-poppy.md
@@ -6,15 +6,17 @@ description: The opium poppy has a long, complex history—as a sacred medicinal
   perceptions of the poppy as both a symbol of beauty and a global blight.
 author: Carol Chang, Heather Rose Craddock, and Alejandro Garay
 date: 2025-01-01
-layout: post
-thumbnail: poppy.jpg
 permalink: /poppy
 tags: flower ornamental psychoactive medicinal
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/poppy
 image:
   path: wc:A_naturalist_in_Western_China_-_with_vasculum%2C_camera%2C_and_gun%2C_being_some_account_of_eleven_year%27s_travel%2C_exploration%2C_and_observation_in_the_more_remote_parts_of_the_flowery_kingdom%3B_%281913%29_%2814782677905%29.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 
