--- a/_posts/2025-07-16-quinoa.md
+++ b/_posts/2025-07-16-quinoa.md
@@ -7,15 +7,17 @@ description: Quinoa became a global “superfood” almost overnight, but its ro
   in global food trends.
 author: Matthew Turetsky
 date: 2025-01-01
-layout: post
-thumbnail: quinoa.jpg
 permalink: /quinoa
 tags: grain high-altitude staple gluten-free
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/quinoa
 image:
   path: wc:White%2C_red%2C_and_black_quinoa.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 [Quinoa](Q139925) had its big break in 2013, when the [Food and Agriculture Organization](Q119847893) of the United Nations (FAO) declared it the International Year of Quinoa, and a flurry of newspaper and scholarly articles talked about this new food. It seemed to appear out of nowhere, and it had wonderful nutritional properties—high protein, essential vitamins and minerals, gluten-free.[^1] For its exceptional nutrition and exoticism, people began calling quinoa a “[superfood](Q3772675),” an idea whose roots date back to [marketing campaigns for bananas in the early twentieth century](https://www.hsph.harvard.edu/nutritionsource/superfoods/). For several years prior to FAO's announcement, and especially following 2013, consumers in the Global North began adding it to salads for a protein boost, substituting it for rice to eliminate carbs, and experimenting with it in baked goods. And yet, these new consumers hardly knew where it came from, the farmers who cultivated it, what quinoa meant to the farmers before the quinoa boom, and the impact of the food trend on these communities.
