--- a/_posts/2025-08-28-potato.md
+++ b/_posts/2025-08-28-potato.md
@@ -12,8 +12,6 @@ description: The potato (Solanum tuberosum), domesticated in the Andes around 10
   resistance.
 author: Nola Rettenmaier, Alexander Betz, and Jessica Gómez
 date: 2025-08-01
-layout: post
-thumbnail: potato.jpg
 permalink: /potato
 tags: cold-hardy high-altitude root staple temperate vegetable
 published: true
@@ -21,7 +19,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/potato
 image:
   path: wc:Patates.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 Woven into the history of the potato, from its Indigenous domestication in the Andes to its prevalence in diets around the world today, are the contrasting themes of comedy and tragedy, sustenance and toxicity, manna and misery. Playful and comedic interpretations of the potato abound, as seen in the cartoon by Alfred Le Petit from the 1871 collection *Fleurs, Fruits & Legumes Du Jour*. It lampoons Pierre-Frédéric Dorian, the French Minister of Public Works, by likening him to the humble and earthen tuber. Translated into English, the text reads, “While the poet wanders in vain through the ether, Dorian acts, as everyone knows; In the reality which we find ourselves in, one can never be too much a man of the earth [*homme de terre*]." The clever wordplay of *homme de terre*/*pomme de terre* (French for potato) alludes to Dorian’s role in weapons manufacturing and policy; unlike poets, he is a grounded person of action—or so one might think. Despite his prominence in the politics of defense, Dorian refused to take a position during the popular uprisings of October 31, 1870, which likely accounts for his inclusion in this 1871 satirical publication.
