Various QC corrections

--- a/_posts/2024-06-05-poppy.md
+++ b/_posts/2024-06-05-poppy.md
@@ -54,7 +54,7 @@ The spread of the poppy itself needed careful monitoring via human intervention 
 
 The use of opium in Europe halted during the Holy Inquisition. Despite that, the opium poppy was transported across Eurasia by traders, merchants, physicians, and travelers. India, the Middle East, and China participated its naturalization; the Silk Road was especially conducive to the poppy’s naturalization, as people held onto poppies for medicine and trade. In 1061, the Chinese scholar [Su Song](Q1265657) writes that, “[Poppies] are hard to cultivate. They must be planted during the ninth month, in a piece of land which was manured the year before. If not cultivated in this way, it will never germinate.”[^ref10] Arab traders traveled through the Silk Road, speading opium poppies across Asia. Opium poppies were integrated into diet and medicine in Southern China and its countryside, where Buddhist monasteries concocted recipes for remedies for ailments related to the throat and stomach.[^ref11] During [Tang Dynasty China](Q9683) (618–907), the Silk Road reached its zenith and because of its easy-entry and the development of other trading routes, recreational opium smoking rapidly spread.
 
-{% include embed/image.html manifest="wc-V0043635ER" description="From Wellcome collection: 'Unripe seed capsules of the opium poppy yield opium. Oil from the seeds is used in artist's paints, salad oil and soap.' Illustration found in book on vegetables and their uses." label="An Opium Poppy: Seed Capsule, Watercolor" license="public domain" %}
+{% include embed/image.html src="https://iiif.wellcomecollection.org/image/V0043635ER/full/880%2C/0/default.jpg" description="From Wellcome collection: 'Unripe seed capsules of the opium poppy yield opium. Oil from the seeds is used in artist's paints, salad oil and soap.' Illustration found in book on vegetables and their uses." label="An Opium Poppy: Seed Capsule, Watercolor" license="public domain" %}
 
 Century after century, social perceptions of the opium poppy have changed drastically, despite being useful as a medicinal drug throughout history. Meanwhile, both Asia and the Middle East took part in opium trading when Europe banned the use of Eastern products during the Holy Inquisition. In the sixteenth century, [Paracelsus](Q83428), a physician and scholar, repopularized the opium poppy as the drug “[laudanum](Q898739)”, a tincture of opium with wine or water. It was then that European societies returned to using the opium poppy for medicine. In China, opium use became popular across classes, beginning in royal courts and rural regions and spreading to the working class. In the late eighteenth century, opium became a major part of China’s sex industry. European nations considered Dutch sailors who smoked opium at the time,  “primitive people” for partaking.[^ref12]  By the nineteenth century, certain types of opium were prized commodities once again. Author and naturalist George Birdwood writes of Indian opium as “the luxury of the rich in China, as champagne is in Europe and America."[^ref13] Asian and Middle Eastern use of the morphine content in opium via smoking distinguished opium use from western use of opium through pills and tinctures. 
 
@@ -77,13 +77,13 @@ Moving into the eighteenth century, Swedish naturalist Carl Linnaeus named the o
 
 The nineteenth century saw a conflict between these concepts of the opium poppy: as a plant of beauty that provided relief and inspiration, and increasingly negative attitudes towards the morality of the trade and use of the drug, with the western and eastern perceptions increasingly overlapping. [Herbals](Q6165948), such as the physician [Hermann Adolph Köhler's](Q1279282) [*Medizinal-Pflanzen*](https://www.biodiversitylibrary.org/page/303420) (1890), continued to categorize the opium poppy as a medicinal plant. The relieving effects of opium led to its use in commonplace medicines, even for children; it was referred to as "the poor child’s nurse" due to its ability to stop babies crying, as seen in this 1849 edition of *Punch* magazine.
 
-{% include embed/image.html src="wc:Poor_child's_nurse,_child_with_opium,_Punch,_1849_Wellcome_L0003359.jpg" region="170,1484,4071,3238" %}
+{% include embed/image.html src="wc:%22Poor_child's_nurse%22,_child_with_opium,_Punch,_1849_Wellcome_L0003359.jpg" region="170,1484,4071,3238" %}
 
 # War and Colonialism
 
 As the opium poppy developed into a household drug, its role within the political conflicts of empire, trade, and regulation in the nineteenth century was epitomized in The Opium Wars (1839-1842 and 1856-1860). The opium poppy was connected to another primary economic plant of the period, [tea](Q6097), and the trade imbalance between Britain and China, with China accepting only silver in exchange for tea. The British response was to illegally smuggle Indian opium into China for payment in silver. [^ref15] Fraught discussions of the ‘Opium Question’ centered on the morality of the trade, considering the addictive properties of the drug, as well as Britain's financial dependence on opium. An 1882 edition of the [*Journal of the Society of Arts*](https://archive.org/details/journalofsociety30soci_0/page/200/mode/2up) records a discussion of this among members of the society including former Home Secretary Henry Bruce and doctor Sir John Rutherford Alcock, who lived in China for twenty years: "[T]here was a very painful impression on the minds of some persons as to the morality of this trade [...] many believed that this country [Britain] was not only importing on a large scale a pernicious drug into the most populous country of the world, but also compelling its introduction and use by force of arms."
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=15lvYjMlhf6M1xYvad7yTbj54DhRo3Flhi_1GlGm6Fhg&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=15lvYjMlhf6M1xYvad7yTbj54DhRo3Flhi_1GlGm6Fhg&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" height="650px" class="full" %}
 
 This question of morality was heightened by the drug trade being fueled in British India. The [East India Company](Q83164) sought to monopolize opium production in India from the 1770s onwards and by the nineteenth century managed opium poppy plantations across the country.[^ref16]  However, they sold off the product to private merchants to transport to China, increasingly disconnecting the opium poppy plant from the drug product it provided.[^ref17] 
 
