--- a/_posts/2025-11-25-wild-rice.md
+++ b/_posts/2025-11-25-wild-rice.md
@@ -27,14 +27,14 @@ Known for its distinct flavor and chewy texture, wild rice has become a gourmet 
 
 The *Zizania* genus is housed in the Oryza genus of the Poaceae (grass) family. *Zizania palustris* is one of four wild rice species native to North America, the other three being *Z. aquatica*, *Z. texana*, and *Z. latifolia*. *Z. palustris* is unrelated to the more commonly known Oryza white rice domesticated in Africa and Asia. The two species diverged twenty-six to thirty million years ago, with *Zizania* becoming established in North America about five million years ago and expanding across the continent using ice-age [refugia](https://en.wikipedia.org/wiki/Glacial_refugium).[^2]  Unlike white rice, wild rice is not a "true" rice and is instead a species of aquatic grass whose seeds resemble white rice grains. 
 
-{% include embed/image.html src="gh:floraklein/Zizania-palustris/main/wild%20rice/KEW%20POW%20Z%20palustris.jpg" caption="Zizania palustris type specimen" aspect=".74" %}
-{% include embed/image.html src="gh:floraklein/Zizania-palustris/main/wild%20rice/Kew%20POW%20Z%20palustris%20dist.png" caption="Global distribution of Zizania palustris" aspect="3.5" %}
+{% include embed/image.html src="KEW_POW_Z_palustris.jpg" caption="Zizania palustris type specimen" aspect=".74" %}
+{% include embed/image.html src="Kew_POW_Z_palustris_dist.png" caption="Global distribution of Zizania palustris" aspect="3.5" %}
 {% include embed/image.html src="wc:The_book_of_grasses_-_an_illustrated_guide_to_the_common_grasses,_and_the_most_common_of_the_rushes_and_sedges_(1912)_(14576920329).jpg" caption="Zizania aquatica and Zizania palustris" aspect=".65" %}
 
 *Z. palustris*, whose specific epithet translates as "marshy" or "swampy," was originally thought to belong to *Z. aquatica*, a species of wild rice native to the Eastern United States. However, in his *Mantissa Plantarum Altera* (1771), a book of botanical text and illustrations, Swedish botanist [Carl Linnaeus](https://en.wikipedia.org/wiki/Carl_Linnaeus) distinguishes the two plants as separate species.[^3]
 
 {% include embed/image.html src="wc:Carl_von_Linné.jpg" caption="Carl Linnaeus (1775)" aspect="0.83" %}
-{% include embed/iframe.html src="https://www.biodiversitylibrary.org/page/42945403page/163/mode/1up" %}
+<!-- {% include embed/iframe.html src="https://www.biodiversitylibrary.org/page/42945403page/163/mode/1up" %} -->
 
 The turn of the twenty-first century saw the release of the first wild rice genome map, and with it came concern over the flow of genes from cultivated to wild rice stands, or groups of plants.[^4] In the wild-rice waters of northern Minnesota, researchers have found that wild rice populations are genetically distinct from one another and that there is very little [gene flow](https://en.wikipedia.org/wiki/Gene_flow) across watersheds.[^5] Concerns remain that genetically diverse wild stands, whose seeds are unable to be stored in [ex situ repositories](https://en.wikipedia.org/wiki/Seed_bank), will be overtaken by genetically modified wild rice supergroups.[^6] 
 
@@ -81,7 +81,7 @@ Many travelers to the Great Lakes region following Kalm’s expedition viewed wi
 
 In his 1803 "Observation on the *Zizania aquatica*," British botanist Aylmer Bourke Lambert described the transportation of *Z. aquatica* seeds from Canada to Europe in glass jars. Long considered a "desideratum among the botanists of [England]," he noted his desire to grow the seeds in the "many shallow pieces of water" in Great Britain and Ireland.[^18] Beginning with French botanist André Michaux, few, if any, were able to grow wild rice in Europe.[^19]
 
-{% include embed/iframe.html src="https://www.biodiversitylibrary.org/page/756477#page/317/" %}
+{% include embed/iframe.html src="https://archive.org/embed/mobot31753002433537/page/264/mode/1up" aspect="0.65" %}
 {% include embed/image.html src="wc:Aylmer_Bourke_Lambert._Stipple_engraving_by_W._Holl,_1805,_a_Wellcome_V0003335.jpg" caption="xxx" aspect="0.73" %}
 {% include embed/image.html src="wc:François_André_Michaux_(1770–1855).jpg" caption="xxx" aspect="0.74" %}
 
@@ -95,7 +95,7 @@ Cultural traditions involving wild rice were linked to the seasons. Anishinaabe 
 
 In "Gathering Wild Rice, 1849–1855," Seth Eastman, an artist and U.S. Army commander at Fort Snelling, depicts three women, most likely Anishinaabe, in the process of harvesting wild rice. The watercolor drawing, the first known painting of wild rice, depicts one woman paddling a canoe and two others beating rice stalks with flat paddles. American anthropologist and ethnographer Frances Densmore later captured the multi-step harvesting process in her photography from the early twentieth century. In her 1928 "How Indians Use Wild Plants for Food, Medicine, and Crafts," Densmore describes the process of establishing harvesting camps and the act of "ricing" itself, in which Ojibwe women would harvest by traveling in birchbark canoes.[^22] When ricing, one person would paddle the canoe using a push pole (Gaandakii-iganaak), while another would knock rice stalks with special sticks (Bawa’iganaak) so that ripe rice seeds would fall into the canoe and into the lake water. After harvesting, the rice was dried on birchbark sheets, parched to loosen the husk, and pounded with wooden paddles. It would then be winnowed and trodden upon and later stored. In the lakes and streams that had not been disrupted by dam construction, year after year over the course of centuries, the knowledge and practices of ricing had been kept alive and passed down through generations of Ojibwe. 
 
-{% include embed/iframe.html src="NL000379_o2.jpg" %}
+{% include embed/image.html src="NL000379_o2.jpg" %}
 {% include embed/image.html src="wc:Wild_rice_harvesting_and_processing_-_NARA_-_285183.jpg" caption="Wild rice harvesting and processing" aspect="1.7" %}
 {% include embed/image.html src="wc:Winnowing_the_wild_rice_in_a_birch_bark_basket.jpg" caption="Winnowing the wild rice in a birch bark basket" aspect="1.5" %}
 {% include embed/image.html src="wc:Parching_the_wild_rice_over_an_open_flame.jpg" caption="Parching the wild rice over an open flame" aspect="1.5" %}
