--- a/_posts/2024-02-14-katsura.md
+++ b/_posts/2024-02-14-katsura.md
@@ -70,7 +70,7 @@ It was once thought that Dumbarton Oaks’ katsura was planted by Edward Linthic
 
 In 1862, President Abraham Lincoln appointed [Thomas Hogg Jr.](Q21515943) (whose father established one of New York City’s first nurseries) to the Japanese Consulate in Kanagawa in 1862. During his post, which he occupied until 1869, he sent seeds of Japanese flora to his brother James, who grew them in his home garden. It was during Hogg Jr.’s second trip to Japan, as he “worked as an independent advisor to the Japanese Customs Service,” in the 1870s that he acquired katsura seeds.[^ref17] He sent these to Samuel B. Parsons, the owner of the Kissena Nursery, because he had experience with propagating and growing Japanese plants.[^ref18] Parsons began selling one-foot tall katsura in 1874. In an 1879 letter published in _The Gardener’s Monthly and Horticulturalist_, Hogg Jr. denied botanist [Charles Sprague Sargent’s](Q1066128) claim that agricultural scientist [William S. Clark](Q901202) introduced katsura to the United States.[^ref19] [^ref20] In reference to Sargent visiting James’ garden after Thomas returned from his second trip to Japan, Hogg Jr. remarked that “it seems incredible that so remarkable a plant could have escaped the notice of so enthusiastic an admirer of trees.”[^ref21]
 
-{% include embed/iframe.html src="gardenersmonthly21meeh_0083.jpg" aspect="0.7" %}
+{% include embed/image.html src="gardenersmonthly21meeh_0083.jpg" aspect="0.7" %}
 
 A 1922 [topographical survey](Q112127197) of Dumbarton Oaks, providing the diameters of trees throughout the property, marks an unnamed tree (simply referred to as “Tree”) where the katsura is located.[^ref22] The 1922 survey gives the “Tree” a diameter of twenty inches, which would make it at least twenty to thirty years old at that point. However, dating a tree with only a diameter is difficult without knowing the exact conditions in which the tree grew. The estimate provided here is only accurate if the tree grew healthily when its diameter was measured in 1922.[^ref23] If the tree was well taken care of before the Bliss’ purchase of the property, Dumbarton Oaks’ katsura is at least 120 years old—though, the age provided here is only a guess. Given this estimated age of Dumbarton Oaks’ katsura, and the chronology of katsura’s introduction to the United States, the Blount family is the most likely candidate for planting the tree. Henry Fitch Blount purchased the Oaks in 1891 from Linthicum—around the same time the katsura would have been planted (but only if the twenty-thirty age estimate derived from the 1922 survey is accurate). Lucia Blount, Henry’s wife, was “interested in developing the grounds further as gardens” and collected trees from nearby property owners.[^ref24] The time when the Blount family purchased Dumbarton Oaks, along with their improvements of the grounds which include the introduction of boxwoods into the garden, make them a likely suspect. This also fits in with when the Washington Nursery, owned by John Saul, one of the District’s well-known nurserymen, first included the katsura in his wholesale catalog in 1895, which notes the tree being a “recent introduction.”[^ref25]
 
