Various QC corrections

--- a/_posts/2021-01-25-dittany.md
+++ b/_posts/2021-01-25-dittany.md
@@ -34,17 +34,8 @@ By the beginning of the [Medieval period](Q12554), the works of classical author
 
 One such lore was the power of dittany for women’s health. According to the Roman physician Dioscorides, arguably the most influential ancient author on medicinal herbs, "diktamnos," as he called it, was a hot plant with woolly leaves, and true dittany grew only on the island of [Crete](Q34374). Like Pliny, Dioscorides described the medical virtues of dittany (and bastard dittany) for women, which he said when drunk, used as suppository (pessary), or burned as incense had the power to expel a dead fetus. Dioscorides’s _[De Materia Medica](Q1291275)_ served as the foundational text for most European herbal manuscripts. As such, Dioscorides’s description of dittany as well as his claim that it had the power to quicken birth and expel a dead fetus, were repeated in medieval herbal manuscripts as well as in early modern printed herbals.
 
-<!-- broken image link
-{% include embed/image.html manifest="2314efcd51a8737c56c82eebde7123aef58754a932f461508100d0d2ae92907f.yaml" aspect="" %}
--->
 
 By the early modern period, dittany was often described in herbals [in three forms.](https://biodiversitylibrary.org/page/56599913) The first was true dittany, a rare herb which, as Pliny wrote, grew only on rocky cliffs on the island of Crete. The second was white dittany (sometimes called fraxinella), and the third was bastard or false dittany. Today, these correlate to three different species across three related genera—_[Origanum dictamnus](Q1227336)_, _[Dictamnus albus](Q157755)_, and _[Ballota pseudodictamnus](Q15345437)_ respectively. While we now classify dittany as three distinct species, in early modern herbals the main differences between the three were origin and, most importantly, potency. Whether described in two or three forms, dittany continued to be classified as a potent emmenagogue and an expellant for both a fetus and afterbirth in early modern herbals.
-
-<!-- broken image links
-{% include embed/image.html manifest="2a8d3ff777f06996b55f34312ded1dfaa6f513ef4d9ec770f15aae46843cd50a.yaml" aspect="" %}
-{% include embed/image.html manifest="3d13c3c61f78f56bd9f063c11b4d82b6b3e75af49952951faee9697313541875.yaml" aspect="" %}
-{% include embed/image.html manifest="7c876b6f3affb2130639db6ed6361ddcf97a767b5819cf10927c56ff090e5fe8.yaml" aspect="" %}
--->
 
 # Herbals and Women’s Medical Knowledge 
 
@@ -85,15 +76,11 @@ Gerard’s explicit statement associating provoking menstruation with ending a p
 
 The line between contraception (avoiding pregnancy) and abortion (terminating pregnancy) was not clear in the pre-modern world. In the early modern context, the word abortion was more akin to miscarriage. Because of this, historians argue that using herbs to terminate an early pregnancy was not only socially acceptable, it was also legally permissible. Unlike contemporary science, pre-modern theories of conception did not distinguish between an embryo and a fetus. Early modern sources also did not assign full personhood to a fetus. Furthermore, a woman in the early modern world was not pregnant until she declared it. Without our contemporary tests and ultrasounds, detecting pregnancy within the first few months was difficult, and, thus, left up to the mother. Prior to the professionalization of obstetrics, it was a woman, not male physicians, who determined when a fetus became viable. The [quickening](Q7271728)—when a pregnant woman began to feel or perceive fetal movements, usually between fifteen to seventeen weeks (three to four months)—was the most important confirmation of a viable pregnancy and often when women announced it.
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1aH_OUcNvM7gAclhG0HdahdhoAAg4LwVyD9fVRyV44OEtimenav-position=bottom&hash-bookmark=false" height="650px" class="full" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1aH_OUcNvM7gAclhG0HdahdhoAAg4LwVyD9fVRyV44OE&timenav-position=bottom&hash-bookmark=false" height="650px" class="full" %}
 
 # Did Dittany Work?
 
 No twentieth or twenty-first century scientific studies specifically assess dittany’s ability to provoke menstruation or its efficacy as an early-term abortifacient. It is telling, however, that in most early modern herbals, dittany was often compared to pennyroyal—a plant in the [mint](https://lab.plant-humanities.org/mint/) family—which has also been considered a powerful abortifacient since antiquity. In his herbal, [Mattioli related dittany to "pulegium" or "pulegio,"](https://www.biodiversitylibrary.org/page/51721921) the early modern Latin and Italian names for pennyroyal. Mattioli stated that dittany was even sometimes called "pulegio salvatico," or wild pulegio. According to Mattioli, the difference was that dittany was from the island of Crete and had larger fronds. Mattioli’s contemporary and associate, naturalist [Ulisse Aldrovandi](Q321358), also connected dittany and pulegio. Aldrovandi was an avid collector of nature and is credited with creating the first herbarium. His surviving herbarium specimens have been carefully preserved and digitized. Written under the name "Dictamnum Creticum" of his 400-year-old dried specimen is "Pulegium Sylvestre."
-
-<!-- broken image link
-{% include embed/image.html manifest="2a8d3ff777f06996b55f34312ded1dfaa6f513ef4d9ec770f15aae46843cd50a.yaml" aspect="" %}
--->
 
 While contemporary scientific research has not assessed dittany’s biofactors in relation to reproductive health, researchers have identified pennyroyal’s key active compound, [pulegone](Q413816). A lab experiment by Soares et al.[^ref8] revealed that the [essential oil](Q170885) of pennyroyal and isolated pulegone does have the potential to produce significant effects on the female reproductive system. In fact, many plants high in essential oils have proven abortifacient properties.[^ref9]  Nearly all of the herbs cited as an effective emmenagogue across the herbals of Mattioli, Durante, and Gerard have high essential oil contents, and mugwort, pennyroyal, and rue remain classed as herbs women should avoid while pregnant today.[^ref10]
 
