--- a/_posts/2021-01-25-mint.md
+++ b/_posts/2021-01-25-mint.md
@@ -11,7 +11,7 @@ tags: herb medicinal temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/mint
 image:
-  path: wc:English_botany%2C_or%2C_Coloured_figures_of_British_plants_%281863%29_%2814784245103%29.jpg
+  path: wc:English_botany,_or,_Coloured_figures_of_British_plants_(1863)_(14784245103).jpg
 layout: juncture
 ---
 
