--- a/_posts/2021-03-03-cassava.md
+++ b/_posts/2021-03-03-cassava.md
@@ -51,7 +51,7 @@ The Moche ceramic contains further clues as to early Andean understanding of cas
 
 While storing cassava in the soil addresses the issue of perishability, additional steps need to be taken to ensure that its roots can be safely eaten upon harvesting. In the Amazon, cassava is popularly divided into two major types—sweet and bitter—depending on the level of toxicity. Sweet cassava can be eaten simply by peeling and boiling it. Bitter cassava must be processed using a specific method before being safely consumed.[^ref8] The danger lies in [cyanogenic glucosides](Q8964351), the amount of which varies depending on the type of cassava, the climate, and the season in which it is cultivated.[^ref9] Women in Meso- and South America are primarily responsible for the processing of cassava and transforming the poisonous plant into flour for _[casaba](Q61998616)_, or cassava bread, and into a fermented beverage known as _[chicha](Q516592)_. It is a multi-step process that includes washing and grating the cassava root, mashing it into a pulp, then hanging, dehydrating, and finally baking the dried pulp on a hot surface.[^ref10]
 
-{% include embed/image.html manifest="Saliva_Indian_Women_Making_Cassava_Bread,_Province_of_Casanare.yaml" %}
+{% include embed/image.html src="wc:Manuel_María_Paz_(watercolor_9017,_1856_CE).png" %}
 
 Some of the implements used for processing cassava include [graters, strainers or squeezers, and sieves.](https://www.spurlock.illinois.edu/blog/p/food-and-drink/294) Cassava graters are generally constructed by embedding small stones or nails into a wooden surface.[^ref11] The cassava root is rubbed along the device so that the stones or nails shred the tuber into small pieces. These pieces are soaked in water to form pulp, which is placed into a strainer or squeezer to remove the liquid. The toxins are removed during this straining process.[^ref12] Cassava squeezers have a similar form throughout South America: a circular woven tube that is designed to be hung from up high. The woven designs, however, may differ according to culture. After the liquid is drained, the cassava pulp is further passed through a sieve, after which it is suitable for cooking and consumption.
 
