--- a/_posts/2021-05-24-peony.md
+++ b/_posts/2021-05-24-peony.md
@@ -11,7 +11,7 @@ tags: flower ornamental temperate
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/peony
 image:
-  path: wc:Smith_-_Chinese_Tree_Peony_%28Paeonia_suffruticosa%29_-_1939.288_-_Cleveland_Museum_of_Art.jpg
+  path: wc:Smith_-_Chinese_Tree_Peony_(Paeonia_suffruticosa)_-_1939.288_-_Cleveland_Museum_of_Art.jpg
 layout: juncture
 ---
 
@@ -118,7 +118,7 @@ In addition to the cleansing and purgative properties associated with peony and 
 
 For more than 2,000 years, numerous peony species were used as a powerful herbal therapeutic across societies in Europe and Asia. [Herbal medicine](Q861699) in the western tradition, however, changed dramatically over the course of the late-eighteenth and nineteenth centuries as European chemists, botanists, and physicians began favoring the creation of standardized and systematic medical experimentation to assess the efficacy of plant medicines and identify and isolate their active chemical compounds. This led to an emphasis on the individual organic compounds within plants and the organic chemical synthesis of these compounds to produce more effective drugs. It also marked the birth of modern pharmaceuticals, many of which are derived or synthetic analogues of naturally occurring chemical structures. The ability to isolate, purify, and synthesize chemical structures created [highly efficacious and powerful drugs](Q507443). And so, herbal simples and compound herbal medicines were replaced and increasingly viewed as outdated, crude, ineffectual, and, in some cases, even dangerous.
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1kjtI9t7HgoZRiDeDyGjXXabVm2b3nZqTYFxnmxQUFFI&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1kjtI9t7HgoZRiDeDyGjXXabVm2b3nZqTYFxnmxQUFFI&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" height="650px" class="full" %}
 
 Despite modern western medicine tending to dismiss early therapeutics like Anna Maria Luisa de Medici’s infant convulsion powder, numerous scientific studies on several species of peony used medically in East Asia have revealed isolated compounds that possess anti-tumor, anti-oxidant, anti-inflammatory, hepatoprotective, and anti-diabetic properties.[^11] Peony roots and flowers continue to be used as a medicinal simple in [Traditional Chinese](Q200253) and [Ayurvedic](Q132325) medicine. While fewer studies have been conducted on European species of peony used medicinally, several studies have tested for the bioactive compounds responsible for _P. officinalis’s_ effect on seizures.
 
@@ -138,7 +138,9 @@ The seeming effectiveness of her infant convulsion powder increased Anna Maria L
 
 The gift of "miraculous" medicine to the Viennese court was not simply altruistic. As a woman, Anna Maria Luisa was barred from inheriting and ruling Tuscany on the death of her brother, the [last Medici Grand Duke](img5/zoomto/1061,479,736,629). Although she lacked official power, Anna Maria Luisa fashioned influence through the gift of her infant convulsion powder, which allowed her to ingratiate herself with some of [Vienna’s most important and powerful families](img5/zoomto/214,581,1271,955). This ensured goodwill and communication between the Grand Duchy of Tuscany and the court that would decide its fate. By the end of the Medici dynasty, the Viennese court was the headquarters of the Habsburg dynasty and the center of its imperial politics. In 1737, [Francis of Lorraine](Q151075), future head of the [Holy Roman Empire](Q12548), which controlled much of Europe at this time, became the Grand Duke of Tuscany and ruled Florence from the imperial court in Vienna—a court much indebted to Anna Maria Luisa de Medici’s infant convulsion powder and the power of peony.
 
-{% include embed/image.html id="img5" src="Line_of_Sucession_for_the_Grand_Duchy_of_Tuscany.jpg" region="412,1,1423,1209" aspect="1.33" %}
+{% include embed/image.html id="img5" src="Line_of_Sucession_for_the_Grand_Duchy_of_Tuscany.jpg" aspect="1.33" %}
+
+---
 
 [^1]: Zhou Shi-Liang et al., "Multiple species of wild tree peonies gave rise to the ‘king of flowers’, _Paeonia suffruticosa_ Andrews," _Proceedings: Biological Sciences_ 281, no. 1797  (December 2014): 1–8.
 [^2]: John H. Harvey, "Turkey as a Source of Garden Plants," _Garden History_ 4, no. 3 (1976): 21–42. Accessed March 25, 2021. [doi:10.2307/1586521.](https://www.jstor.org/stable/1586521)
