--- a/_posts/2022-04-04-tamarind.md
+++ b/_posts/2022-04-04-tamarind.md
@@ -94,10 +94,6 @@ edge,15,5,in Guinea and Malaysia is a Tamarindus indica L. (1753)
 
 The tamarind tree is a nonendangered semi-evergreen fast-growing species. It is best suited to those regions characterized by seasonal dry forests, tropical seasonal forests, and savanna [biomes](Q101998).[^ref6] These biomes’ climates feature slightly strong thermal oscillation and concentrated rains during specific times of the year, resulting in water stress for plants during the dry season. As a drought-resistant tree, tamarind has the capacity to grow in poorly developed soils through nitrogen fixation, a feature shared by all species from the [Fabaceae](Q44448) family. In addition, it can endure aerosol salt from windy coastal areas and sequesters carbon. For these reasons, it’s not surprising that tamarind can be found in 54 countries along the plant’s historical circulation routes. In the [Sahelian region](Q106474492) and many other parts of Africa, tamarind fruits collected from natural populations or individual trees are essential components of the nonmonetized hidden harvest of wild resources. The assessment of the economic importance of the tamarind fruits’ hidden harvest requires estimating how much local populations would have to pay to replace these free resources.[^ref7] As such, tamarind acts as an enhancer of [agroforestry](Q397350) for small farmers and landless laborers in semi-arid areas in danger of [desertification](Q183481).
 
-<!-- image not found
-{% include embed/image.html src="https://www.rct.uk/sites/default/files/collection-online/3/b/519410-1424804520.jpg" caption="Tamarind Tree in Saras Baug, Pune, c.1870, albumen print, 18.9 x 24.0 cm, Royal Collection Trust/©Her Majesty Queen Elizabeth II 2020" %}
--->
-
 Some sources suggest that tamarind was introduced into [India](Q668), the world’s largest tamarind producer (and then spread to Southeast Asia) from Central Africa by Arab trade groups over land and sea. It is more likely, however, that Ethiopian merchants, who traded with India centuries before the Arabs, brought the plant to India via sea routes, keeping the long-lasting and nutritious tamarind pulp on board ships for food and drink. It is well-documented that the Arabs, perhaps after seeing tamarind thrive in India, traded the plant back to the Middle East and Europe.[^ref8] From Europe, the plant moved west with Spanish and Portuguese settlers, who transported it to Central and South America and the West Indies.
 
 {% include embed/map.html center="-0.70311,10.54688" zoom="1" basemap="Esri_WorldGrayCanvas" geojson="Tamarind_map.json" %}
@@ -123,7 +119,7 @@ Virtually every part of the tamarind tree—seeds, fruity pulp, bark, root, and 
 
 Tamarind is mentioned in traditional Sanskrit literature and traditional African medical texts like the [_Kitab al-qawl al-sinna_.](http://www.cci.uct.ac.za/usr/cci/publications/aria/download_issues/2012/Mukhtar%20Bunza.pdf) It also appears in the _[Susruta-Samhita](Q1995239)_, an Ayurvedic medicine text. With such a diverse array of uses—and its hearty ability to withstand hot, dry climates—the plant captured the imagination of colonists on the hunt for profitable crops. The well-known synonym _T. occidentalis_, for example, was included in physician and horticulturalist [Henry Perrine’s](Q4268924) 1838 report to the U.S. Congress House Committee on Agriculture, in which he includes _T. occidentalis_ as a notable crop of value.
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N898HvO8a50-MMGVxGCR-MGbd6ftuk7b&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N898HvO8a50-MMGVxGCR-MGbd6ftuk7b&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" height="650px" class="full" %}
 
 Tamarind’s resilience has made it a central part of herbal medicine practices across history. The seventeenth-century oil painting created after a design by the French printmaker [Nicolas de Larmessin II](Q16666497) portrays three men as the personifications of medicine, pharmacy, and surgery. At the center of the composition, the physician personifying medicine is cloaked in garb that bears the names of medieval authors central to traditional Western medicine, including [Avicenna](Q8011) and [Mesue](Q1291511), two Persian polymaths credited by Tournefort as key to the spread of knowledge about tamarind. Taking a closer look, just beneath the medicine man’s hand, is a [written prescription](img2/zoomto/366,572,344,300) to treat medical ailments, and nestled within the text that includes "[cassia](Q162882)" and "[rhubarb](Q7535)" is none other than "tamarind."
 
