--- a/_posts/2022-05-17-peanut.md
+++ b/_posts/2022-05-17-peanut.md
@@ -11,7 +11,7 @@ tags: legume nut oilseed nitrogen-fixer
 published: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/peanut
 image:
-  path: wc:A_Peanut_Plant%2C_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg
+  path: wc:A_Peanut_Plant,_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg
 layout: juncture
 ---
 
@@ -78,10 +78,6 @@ In the early 1800s, peanuts were planted by communities of enslaved persons and 
 
 After the war, spurred on by advances in agricultural technology, the use of peanut spread throughout the country. Instrumental to this was [George Washington Carver](Q296898) (c.1864–1943), the pioneering [Black agricultural scientist](https://libguides.nybg.org/c.php?g=1003078&p=7264400) who devoted much of his career to popularizing the crop in the South. Carver, who was born into slavery in Missouri and taught at the [Tuskegee Institute](Q1682329) during his scientific career, sought to promote crops that could be planted as an alternative to cotton. Carver proposed the cultivation of peanuts as a means to rectify the widespread nutrient depletion and erosion in southern soils caused by the [monoculture](Q220212) of cotton. As nitrogen-fixing legumes, peanuts could return nutrients to the soil as part of a crop rotation that would boost the yield of future cotton plantings.
 
-<!-- Smithsonian image not found
-{% include embed/image.html manifest="https://ids.si.edu/ids/manifest/NPG-NPG_92_156Carver-000001" caption="Clifton Johnson, George Washington Carver, Alabama, c.1900, gelatin silver print, 17.3 x 12.3 cm (sheet), National Portrait Gallery, Smithsonian Institution." %}
--->
-
 An influential Black public figure during the age of [segregation](Q59816), Carver promoted peanut production on a local and a national scale.[^17] In 1922, he testified before Congress on behalf of peanut farmers for establishing protections for domestic peanuts against rising Chinese imports. He also invented a number of uses for peanuts, including products made from peanut oil. And a [1916 Tuskegee Institute report](https://archive.org/details/CAT31355396) authored by Carver illustrates his creativity in devising 105 recipes for peanut-based foods.[^18] Peanuts were now associated with culinary innovation and agricultural advancement—and their star was still on the rise.
 
 {% include embed/image.html src="Dr_George_Washington_Carver_US_Depart_Ag_Flickr_public_domain.jpg" caption="Dr. George Washington Carver, Tuskegee University, Alabama, September 1938, U.S. Department of Agriculture. Public domain. Photo Courtesy National Archives and Records Administration." aspect="0.92" %}
@@ -90,7 +86,7 @@ An influential Black public figure during the age of [segregation](Q59816), Carv
 
 Peanut production in the United States increased with the advent and popularization of peanut butter in North America.[^19] While George Washington Carver is sometimes credited with the invention of peanut butter, U.S. patents for "peanut paste" and "nut butter" began to appear in the late nineteenth century. They included recipes calling for roasting and shelling the peanuts, and then grinding the nuts until they congeal into a paste, with salt and oil as optional additions. At first a tea-time delicacy, peanut butter was marketed as a protein-packed meat replacement during the food rationing of [World War I](Q361), and its utility as a cheap energy source [made it ubiquitous](http://libcdm1.uncg.edu/cdm/ref/collection/HENP/id/681) during the [Great Depression](Q8698).
 
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" %}
+{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1T9E8QZRT7ZFFmb55uLpJUSnELKuqSsXlLmNuVXvOC_I&timenav-position=bottom&hash-bookmark=false&initial-zoom=1" height="650px" class="full" %}
 
 Throughout the first half of the twentieth century, a series of relentless American ad campaigns marketed peanut butter as suitable for all kinds of dishes, from peanut butter sandwiches and chocolate-peanut candies to savory roasts and soups. The [American Empire](Q605269) shaped the peanut-related foodways of its colonies as well, including the Philippines.[^20] And the peanut is comparatively prevalent in Germany due to the historical and contemporary presence of American troops.
 
@@ -115,10 +111,6 @@ Besides selling peanuts on streets and roadsides, vendors in the United States a
 
 Peanuts played a critical role in the British Empire, as well, as demonstrated by the [Tanganyika groundnut scheme](Q2392428). In 1946, British businessmen and officials [developed a plan](https://archive.org/details/notjustpeanutsst00brit/mode/1up) to clear vast areas of vegetation in [Tanganyika](Q431731) for establishing a groundnut monoculture. The aim was to produce enough peanuts to supply Britain, still under government-enforced World War II rationing, with cooking oil and improve food provisions in colonial territories. Historical and environmental geographer Martin Mahoney has [explained](http://www.environmentandsociety.org/arcadia/enemy-nature-military-machines-and-technological-bricolage-britains-great-agricultural) how officials repurposed military technologies to wage a "war" against nature.[^24] Because the British government failed to adequately consider environmental conditions in Tanganyika, crops did not yield as expected and the project was abandoned in 1951.
 
-<!-- Not loading because spreadsheet not found
-{% include embed/iframe.html src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html" %}
--->
-
 # Multispecies Consumption
 
 Humans and livestock are not the only consumers of the peanut plant for its nutrients. Insects, fungi, and bacteria feed on peanut foliage, subterranean parts, and pods. According to National Fertilizer Association [symposium proceedings](https://www.biodiversitylibrary.org/item/118467#page/7/mode/1up) published in 1951, the ["Indian meal moth](Q779383), [almond moth](Q2893450), [saw-toothed grain beetle](Q779905), [and] [flour beetles"](Q20165096) were pests found in the southeastern United States that consumed peanuts when they were in storage.[^25] Today peanut insect pests cause crop damage worldwide, posing a risk to the food security and foodways of many. To safeguard world peanut production, the [Global Crop Diversity Trust](Q2004478) has developed a [conservation strategy](https://cdn.croptrust.org/fileadmin/uploads/croptrust/Documents/Ex_Situ_Crop_Conservation_Strategies/Peanut-Conservation-Strategy_HIRES_4_04_022.pdf) with recommendations for protecting the peanut and its wild relatives from pests, diseases, and climate change.[^26]
@@ -129,7 +121,9 @@ Humans and livestock are not the only consumers of the peanut plant for its nutr
 
 Despite the use of the word [peanut](https://www.merriam-webster.com/dictionary/peanut) to denote a small or meager amount in the English language, we have seen over the course of this essay that the peanut has a rich history that is intricately tied to histories of global trade, slavery, and colonization. From luxury food to livestock feed, the social, cultural, and economic life of this legume has taken on many incarnations. Yet its importance to humans and its [ecosystems](Q37813) is hard to overstate. The peanut plant heals and replenishes soils and has therefore been cultivated as a global environmental intervention method to maintain soil health. Highly nutritious and protein-packed, it is beneficial to the many life-forms that consume it–including to humans in their varied culinary preparations.
 
-{% include embed/image-compare.html before="wc:A_Peanut_Plant%2C_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg" after="wc:Arachis_hypogaea_006.JPG" class="right" %}
+{% include embed/image-compare.html before="wc:A_Peanut_Plant,_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg" after="wc:Arachis_hypogaea_006.JPG" %}
+
+---
 
 [^1]: R. O. Hammons, "The Origin and History of the Groundnut," in *The Groundnut Crop: A Scientific Basis for Improvement*, ed. J. Smartt (Dordrecht: Springer Netherlands, 1994), 24–42. [https://doi.org/10.1007/978-94-011-0733-4_2](https://doi.org/10.1007/978-94-011-0733-4_2)
 [^2]: David John Bertioli, Steven B. Cannon, Lutz Froenicke, et al., "The Genome Sequences of _Arachis duranensis_ and _Arachis ipaensis_, the Diploid Ancestors of Cultivated Peanut," *Nature Genetics* 48, no. 4 (2016): 438–446. [https://doi.org/10.1038/ng.3517](https://doi.org/10.1038/ng.3517)
